--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p class="nombre_clase1">La funcionalidad básica de un navegador web es permitir la visualización de documentos de texto, posiblemente con recursos multimedia incrustados</p>
     <p class="nombre_clase2">Ejemplos de navegadores web</p>
     <p class="nombre_clase3">Safari: Safari es un navegador web de código cerrado desarrollado por Apple Inc. Está disponible para macOS, iPadOS e iOS.</p>
-    <p class="nombre_clase3">mozilla Firefox es un navegador web libre</p>
+    <p class="nombre_clase3">Mozilla Firefox es un navegador web libre y de código abierto desarrollado para Linux, Android, iOS y Microsoft Windows coordinado por la Corporación Mozilla y la Fundación Mozilla.</p>
+    <p class="nombre_clase3">Google Chrome: Google Chrome es un navegador web de código cerrado desarrollado por Google, aunque derivado de proyectos de código abierto.</p>
 </body>
 </html>
