--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <hr>
     <p id="identificador">Un navegador web (en inglés, web browser) es un software, aplicación o programa que permite el acceso a la Web, interpretando la información de distintos tipos de archivos y sitios web para que estos puedan ser vistos.</p>
     <hr>
-    <p class="nombre_clase1">La funcionalidad básica de un navegador web es permitir la visualización de documentos de texto, posiblemente con recursos multimedia incrustados</p>
+    <p style="color:green">La funcionalidad básica de un navegador web es permitir la visualización de documentos de texto, posiblemente con recursos multimedia incrustados</p>
     <p class="nombre_clase2">Ejemplos de navegadores web</p>
-    <p class="nombre_clase3">Safari: Safari es un navegador web de código cerrado desarrollado por Apple Inc. Está disponible para macOS, iPadOS e iOS.</p>
-    <p class="nombre_clase3">Mozilla Firefox es un navegador web libre y de código abierto desarrollado para Linux, Android, iOS y Microsoft Windows coordinado por la Corporación Mozilla y la Fundación Mozilla.</p>
-    <p class="nombre_clase3">Google Chrome: Google Chrome es un navegador web de código cerrado desarrollado por Google, aunque derivado de proyectos de código abierto.</p>
+    <p>Safari: Safari es un navegador web de código cerrado desarrollado por Apple Inc. Está disponible para macOS, iPadOS e iOS.<br>
+       Mozilla Firefox es un navegador web libre y de código abierto desarrollado para Linux, Android, iOS y Microsoft Windows coordinado por la Corporación Mozilla y la Fundación Mozilla.<br>
+       Google Chrome: Google Chrome es un navegador web de código cerrado desarrollado por Google, aunque derivado de proyectos de código abierto.</p>
 </body>
 </html>
